--- a/trunk/SharpFile.csproj
+++ b/trunk/SharpFile.csproj
@@ -71,11 +71,11 @@
   <ItemGroup>
     <Compile Include="Infrastructure\FormatTemplate.cs" />
     <Compile Include="Infrastructure\FullyQualifiedEnum.cs" />
-    <Compile Include="Infrastructure\Settings\LoggerSettings.cs" />
-    <Compile Include="Infrastructure\Settings\ParentResourceRetrieverSetting.cs" />
-    <Compile Include="Infrastructure\Settings\PreviewPanelSettings.cs" />
-    <Compile Include="Infrastructure\Settings\ToolSetting.cs" />
-    <Compile Include="Infrastructure\Settings\ViewSetting.cs" />
+    <Compile Include="Infrastructure\SettingSection\LoggerSettings.cs" />
+    <Compile Include="Infrastructure\SettingSection\ParentResourceRetriever.cs" />
+    <Compile Include="Infrastructure\SettingSection\PreviewPanel.cs" />
+    <Compile Include="Infrastructure\SettingSection\Tool.cs" />
+    <Compile Include="Infrastructure\SettingSection\View.cs" />
     <Compile Include="Infrastructure\WindowsApi\EDITBALLOONTIP.cs" />
     <Compile Include="Infrastructure\WindowsApi\FILETIME.cs" />
     <Compile Include="Infrastructure\WindowsApi\Kernel32.cs" />
@@ -124,9 +124,9 @@
     <Compile Include="Infrastructure\SettingInfos\ChildResourceRetrieverInfo.cs" />
     <Compile Include="Infrastructure\SettingInfos\ColumnInfo.cs" />
     <Compile Include="Infrastructure\Settings.cs" />
-    <Compile Include="Infrastructure\Settings\DualParentSettings.cs" />
-    <Compile Include="Infrastructure\Settings\IconSettings.cs" />
-    <Compile Include="Infrastructure\Settings\PanelSettings.cs" />
+    <Compile Include="Infrastructure\SettingSection\DualParent.cs" />
+    <Compile Include="Infrastructure\SettingSection\Icons.cs" />
+    <Compile Include="Infrastructure\SettingSection\PanelSettings.cs" />
     <Compile Include="IO\ChildResources\DirectoryInfo.cs" />
     <Compile Include="IO\ChildResources\FileInfo.cs" />
     <Compile Include="IO\ChildResources\FileSystemInfo.cs" />
