--- a/trunk/SharpFile.csproj
+++ b/trunk/SharpFile.csproj
@@ -81,7 +81,9 @@
     <Compile Include="Infrastructure\SettingsSection\ParentResourceRetriever.cs" />
     <Compile Include="Infrastructure\SettingsSection\PreviewPanel.cs" />
     <Compile Include="Infrastructure\SettingsSection\Tool.cs" />
+    <Compile Include="Infrastructure\SettingsSection\Tools.cs" />
     <Compile Include="Infrastructure\SettingsSection\View.cs" />
+    <Compile Include="Infrastructure\SettingsSection\Views.cs" />
     <Compile Include="Infrastructure\WindowsApi\EDITBALLOONTIP.cs" />
     <Compile Include="Infrastructure\WindowsApi\FILETIME.cs" />
     <Compile Include="Infrastructure\WindowsApi\Kernel32.cs" />
