--- a/trunk/Plugins/Panes/Previewer/Previewer.csproj
+++ b/trunk/Plugins/Panes/Previewer/Previewer.csproj
@@ -42,6 +42,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PreviewPaneSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.csproj">
