--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Logger\MildlyVerboseLogger.cs" />
     <Compile Include="Logger\VerboseLogger.cs" />
     <Compile Include="Path.cs" />
+    <Compile Include="PluginRetriever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection.cs" />
     <Compile Include="WindowsApi\Messages\CCM.cs" />
