--- a/trunk/Common/Common.csproj
+++ b/trunk/Common/Common.csproj
@@ -56,12 +56,34 @@
     <Compile Include="Reflection.cs" />
     <Compile Include="SettingsBase.cs" />
     <Compile Include="SettingsSection\Logger.cs" />
-    <Compile Include="WindowsApi\Messages\CCM.cs" />
-    <Compile Include="WindowsApi\Messages\EM.cs" />
-    <Compile Include="WindowsApi\Messages\LVM.cs" />
-    <Compile Include="WindowsApi\Messages\WM.cs" />
+    <Compile Include="UI\Animations\AnimationBase.cs" />
+    <Compile Include="UI\Animations\AnimationType.cs" />
+    <Compile Include="UI\Animations\Expando.cs" />
+    <Compile Include="UI\Animations\Fader.cs" />
+    <Compile Include="UI\Animations\IAnimationBase.cs" />
+    <Compile Include="UI\Animations\Tween.cs" />
+    <Compile Include="UI\IconReader.cs" />
+    <Compile Include="Win32\EDITBALLOONTIP.cs" />
+    <Compile Include="Win32\FILETIME.cs" />
+    <Compile Include="Win32\FILE_ATTRIBUTE.cs" />
+    <Compile Include="Win32\Gdi32.cs" />
+    <Compile Include="Win32\ICONINFO.cs" />
+    <Compile Include="Win32\Kernel32.cs" />
+    <Compile Include="Win32\Messages\CCM.cs" />
+    <Compile Include="Win32\Messages\EM.cs" />
+    <Compile Include="Win32\Messages\LVM.cs" />
+    <Compile Include="Win32\Messages\WM.cs" />
     <Compile Include="Comparers\StringLogicalComparer.cs" />
     <Compile Include="Templater.cs" />
+    <Compile Include="Win32\SafeFindHandle.cs" />
+    <Compile Include="Win32\SFGAO.cs" />
+    <Compile Include="Win32\Shell32.cs" />
+    <Compile Include="Win32\SHFILEINFO.cs" />
+    <Compile Include="Win32\SHGFI.cs" />
+    <Compile Include="Win32\User32.cs" />
+    <Compile Include="Win32\Utility.cs" />
+    <Compile Include="Win32\WIN32_FILE_ATTRIBUTE_DATA.cs" />
+    <Compile Include="Win32\WIN32_FIND_DATA.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ChangeLog.txt" />
